# dockio

./: .ignore  Cargo.toml  README.md  deploy.sh  index.html  simple_svg.md
doc/: empty.drawio  index.html
dockio-front/: Cargo.toml  Trunk.toml
dockio-front/src/: app.rs  main.rs  model.rs  styles.rs  utils.rs
dockio-front/src/components/: mod.rs  tooltip.rs
drawio-gen/: Cargo.toml
examples/: echo.rs
src/: docker.rs  main.rs  server.rs  test.rs
