[package]
name = "idrawio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.32.0", features = ["full"] }
futures-channel = "0.3.28"
futures-util = "0.3.28"
log = "0.4.20"
env_logger = "0.10.0"

[[example]]
name = "echo"
