[package]
name = "dockio"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.32.0", features = ["full"] }
futures-channel = "0.3.28"
futures-util = "0.3.28"
log = "0.4.20"
env_logger = "0.10.0"

serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"

[[example]]
name = "echo"
