[package]
name = "dockio"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
# console-subscriber = "0.2.0"
clap = { version = "4.4.7", features = ["derive"] }

serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"

tokio = { version = "1.32.0", features = ["full", "tracing"] }

# ws
futures-channel = "0.3.28"
futures-util = "0.3.28"
tokio-tungstenite = "0.20.1"

# http
hyper = { version = "0.14.27", features = ["full"] }

drawio-gen = { path = "./drawio-gen" }

[[example]]
name = "ws_echo"
