[package]
name = "trunk-template"
version = "0.0.1"
edition = "2021"

[dependencies]
futures = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.64", features = ["DomParser", "Document", "SupportedType", "HtmlCollection"]}
js-sys = "0.3.64"
yew = { version = "0.21.0", features = ["csr"] }
gloo-net = "0.4.0"
gloo-console = "0.3.0"
base64 = "0.21.4"
flate2 = "1.0.27"
