[package]
name = "trunk-template"
version = "0.0.1"
edition = "2021"

[dependencies]
futures = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["DomParser", "Document", "SupportedType", "HtmlCollection", "CssRule", "SvgRectElement"]}
js-sys = "0.3.64"
yew = { version = "0.21.0", features = ["csr"] }
gloo = { version = "0.10.0", features = ["console", "net", "utils", "storage"]}

base64 = "0.21.4"
flate2 = "1.0.27"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
